--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,9 +8,13 @@
                 <li class="nav-item"><a class="nav-link" href="#">Receipes</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Shopping list</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false">
-                        Manage
-                      </a>
+                    <a class="nav-link dropdown-toggle" 
+                    href="#" 
+                    id="navbarDropdown" 
+                    role="button" 
+                    aria-expanded="false">
+                    Manage
+                    </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Save Data</a>
                         <a class="dropdown-item" href="#">Fetch Data</a>
