Master Angular - chp06-Components and Data Binding

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,12 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Receipes</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Shopping list</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" (click)="onSelect('receipe')">Receipes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" (click)="onSelect('shopping')">Shopping list</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" 
                     href="#" 
