--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,19 +3,20 @@
 <div app-servers>Attribute selector</div> 
 <div class="app-servers">class selector</div> -->
 
-<!-- Chapter 03-04 -->
-<!-- <app-header></app-header>
+<!-- Chapter 03-04-06 -->
+<app-header (featureSelected)="onNavigate($event)"></app-header>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <app-receipes></app-receipes>
-            <app-shopping-list></app-shopping-list>
+            <app-receipes *ngIf="loadedFeature === 'receipe'"></app-receipes>
+            <app-shopping-list *ngIf="loadedFeature !== 'receipe'"></app-shopping-list>
         </div>
     </div> 
-</div> -->
+</div>
+
 
 <!-- Chapter 05 -->
-<div class="container">
+<!--<div class="container">
     <app-cockpit 
         (serverCreated)="onServerAdded($any($event))"
         (bpCreated)="onBlueprintAdded($any($event))"
@@ -43,4 +44,4 @@
         </app-server-element>
         </div>
     </div>
-</div>
+</div>-->
