--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,28 +3,30 @@
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Receipe Book</a>
         </div>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
+
+        <div class="nav">
+            <ul class="navbar-nav mr-auto pull-left">
                 <li class="nav-item">
                     <a class="nav-link" href="#" (click)="onSelect('receipe')">Receipes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" (click)="onSelect('shopping')">Shopping list</a>
-                </li>
+                </li>                
+            </ul>
+            <ul class="navbar-nav mr-auto pull-right">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" 
-                    href="#" 
-                    id="navbarDropdown" 
+                    <a class="nav-link menu-item dropdown-toggle" 
+                    data-bs-toggle="dropdown" href="#" 
                     role="button" 
-                    aria-expanded="false">
+                    aria-haspopup="true" aria-expanded="false">
                     Manage
                     </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Save Data</a>
                         <a class="dropdown-item" href="#">Fetch Data</a>
                       </div>
-                </li>
-            </ul>         
+                </li>                
+            </ul> 
         </div>
     </div>
 </nav>
