--- a/src/app/receipes/receipes.component.html
+++ b/src/app/receipes/receipes.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-4">
         <app-receipe-list
-        (receipeWasSelected)="selectedReceipe = $event"></app-receipe-list>
+        (receipeItemSelected)="selectedReceipe = $event"></app-receipe-list>
     </div>
     <div class="col-md-8">
         <app-receipe-detail
