--- a/src/app/receipes/receipe-detail/receipe-detail.component.html
+++ b/src/app/receipes/receipe-detail/receipe-detail.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-xs-12">
-        <img [src]="recipe.imagePath" 
+        <img 
+        [src]="recipe.imagePath" 
         alt="{{recipe.name}}" 
         class="img-responsive"
         style="max-height: 300px;">
@@ -16,22 +17,22 @@
 <div class="row">
     <div class="col-xs-12">
         <div 
-        class="btn-group" 
-        appDropdown>
+            class="dropdown">
             <button 
             type="button" 
-            class="btn btn-primary dropdown-toggle">
-            Manage Receipe <span class="caret"></span>
-            </button>
-            
+            class="btn btn-primary dropdown-toggle"
+            id="dropdownMenuButton" data-bs-toggle="dropdown">
+            Manage Receipe
+            </button>            
             <ul class="dropdown-menu">
-                <li><a href="#">Shopping list</a></li>
+                <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
                 <li><a href="#">Edit Receipe</a></li>
                 <li><a href="#">Delete Receipe</a></li>
             </ul>
         </div>
     </div>
 </div>
+<hr/>
 <div class="row">
     <div class="col-xs-12">
         {{recipe.description}}
@@ -39,6 +40,12 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Ingredients
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let ingredient of recipe.ingredients">
+          {{ ingredient.name }} - {{ ingredient.amount }}
+        </li>
+      </ul>
     </div>
-</div>
+  </div>
