--- a/src/app/receipes/receipe-list/receipe-list.component.html
+++ b/src/app/receipes/receipe-list/receipe-list.component.html
@@ -9,8 +9,7 @@
     <div class="col-xs-12">        
         <app-receipe-item 
             *ngFor="let receipeEl of receipes" 
-            [receipe]="receipeEl"
-            (receipeSelected)="onReceipeSelected(receipeEl)">
+            [receipe]="receipeEl">
         </app-receipe-item>
     </div>
 </div>
