--- a/src/app/receipes/receipes.component.html
+++ b/src/app/receipes/receipes.component.html
@@ -1,12 +1,13 @@
 <div class="row">
     <div class="col-md-4">
-        <app-receipe-list
-        (receipeItemSelected)="selectedReceipe = $event"></app-receipe-list>
+        <app-receipe-list></app-receipe-list>
     </div>
+
     <div class="col-md-8">
         <app-receipe-detail
-        *ngIf="selectedReceipe; else infotext"
-        [recipe]="selectedReceipe"></app-receipe-detail>
+            *ngIf="selectedReceipe; else infotext"
+            [recipe]="selectedReceipe">
+        </app-receipe-detail>
         <ng-template #infotext>
             <p>Please select the receipe</p>
         </ng-template>
