--- a/src/app/receipes/receipes.component.html
+++ b/src/app/receipes/receipes.component.html
@@ -3,7 +3,7 @@
         <app-receipe-list></app-receipe-list>
     </div>
 
-    <div class="col-md-8">
+    <!-- <div class="col-md-8">
         <app-receipe-detail
             *ngIf="selectedReceipe; else infotext"
             [recipe]="selectedReceipe">
@@ -11,6 +11,9 @@
         <ng-template #infotext>
             <p>Please select the receipe</p>
         </ng-template>
+    </div> -->
+    <div class="col-md-8">
+        <router-outlet></router-outlet>
     </div>
 </div>
 
