--- a/src/app/receipes/receipe-list/receipe-item/receipe-item.component.html
+++ b/src/app/receipes/receipe-list/receipe-item/receipe-item.component.html
@@ -1,6 +1,8 @@
-<a href="#"
-class="list-group-item clearfix"
-(click)="onSelected()">
+<a
+  [routerLink]="[index]"
+  routerLinkActive="nav-link active"
+  class="list-group-item clearfix">
+    
     <div class="float-start">
         <h4 class="list-group-item fw-bold"> {{receipe.name}}</h4>
         <p class="list-group-item">{{receipe.description}}</p>
@@ -13,5 +15,6 @@ class="list-group-item clearfix"
             class="img-responsive"
             style="max-height:50px;">
         </span>
-    </div>              
+    </div>
+
 </a>
