--- a/src/app/receipes/receipe-list/receipe-list.component.html
+++ b/src/app/receipes/receipe-list/receipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success"> New Receipe</button>
+        <button class="btn btn-success" (click)="onNewRecipe()"> New Receipe</button>
     </div>
 </div>
 <hr/>
@@ -8,8 +8,10 @@
 <div class="row">
     <div class="col-xs-12">        
         <app-receipe-item 
-            *ngFor="let receipeEl of receipes" 
-            [receipe]="receipeEl">
+            *ngFor="let receipeEl of receipes; let i = index" 
+            [receipe]="receipeEl"
+            [index]="i"
+            >
         </app-receipe-item>
     </div>
 </div>
