--- a/src/app/cmpbindingApp/servers/servers.component.html
+++ b/src/app/cmpbindingApp/servers/servers.component.html
@@ -1,8 +1,12 @@
 
 <label>Servername:</label>
 <!-- <input type="text" class="form-control" (input)="onKeyPress($event)"> -->
-<input type="text" class="form-control" [(ngModel)]="serverName">
-<button class="btn btn-primary" 
+<input 
+    type="text" 
+    class="form-control" 
+    [(ngModel)]="serverName">
+<button 
+    class="btn btn-primary" 
     [disabled]="!allowNewServer"
     (click)="onAddServer_Clicked()"> Add server </button>
 <br/>
