--- a/src/app/receipes/receipe-detail/receipe-detail.component.html
+++ b/src/app/receipes/receipe-detail/receipe-detail.component.html
@@ -34,7 +34,13 @@
                 <li><a style="cursor: pointer;" 
                     (click)="onEditRecipe()" 
                     class="dropdown-item">Edit Recipe</a></li>
-                <li><a style="cursor: pointer;" class="dropdown-item">Delete Recipe</a></li>
+                <li>
+                    <a 
+                        style="cursor: pointer;" 
+                        (click)="onDeleteRecipe()"
+                        class="dropdown-item">Delete Recipe
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
