--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,39 +1,59 @@
 <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a href="#" class="navbar-brand">Receipe Book</a>
-        </div>
-
-        <div class="nav">
-            <ul class="navbar-nav mr-auto pull-left">
-                <li class="nav-item">
-                    <!-- <a class="nav-link" href="#" (click)="onSelect('receipe')">Receipes</a> -->
-                    <a class="nav-link" routerLink="/receipes" routerLinkActive="active">Receipes</a>
-                </li>
-                <li class="nav-item">
-                    <!-- <a class="nav-link" href="#" (click)="onSelect('shopping')">Shopping list</a> -->
-                    <a 
-                    class="nav-link" 
-                    routerLink="/shopping-list" 
-                    routerLinkActive="active">Shopping list</a>
-                </li>                
-            </ul>
-            <ul class="navbar-nav mr-auto pull-right">
-                <li class="nav-item dropdown" ngbDropdown>
-                    <a ngbDropdownToggle
-                    style="cursor: pointer;"
-                    class="nav-link menu-item dropdown-toggle" 
-                    role="button" 
-                    aria-haspopup="true" 
-                    aria-expanded="false">
-                    Manage
-                    </a>
-                      <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a style="cursor: pointer;" class="dropdown-item" >Save Data</a>
-                        <a style="cursor: pointer;" class="dropdown-item" >Fetch Data</a>
-                      </div>
-                </li>                
-            </ul> 
-        </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="#" class="navbar-brand">Receipe Book</a>
     </div>
+
+    <div class="nav">
+      <ul class="navbar-nav mr-auto pull-left">
+        <li class="nav-item">
+          <!-- <a class="nav-link" href="#" (click)="onSelect('receipe')">Receipes</a> -->
+          <a class="nav-link" routerLink="/receipes" routerLinkActive="active"
+            >Receipes</a
+          >
+        </li>
+        <li class="nav-item">
+          <!-- <a class="nav-link" href="#" (click)="onSelect('shopping')">Shopping list</a> -->
+          <a
+            class="nav-link"
+            routerLink="/shopping-list"
+            routerLinkActive="active"
+            >Shopping list</a
+          >
+        </li>
+      </ul>
+      <ul class="navbar-nav mr-auto pull-right">
+        <li class="nav-item dropdown" ngbDropdown>
+          <a
+            ngbDropdownToggle
+            style="cursor: pointer"
+            class="nav-link menu-item dropdown-toggle"
+            role="button"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Manage
+          </a>
+          <div
+            ngbDropdownMenu
+            class="dropdown-menu"
+            aria-labelledby="navbarDropdown"
+          >
+            <a
+              style="cursor: pointer"
+              class="dropdown-item"
+              (click)="onSaveData()"
+              >Save Data</a
+            >
+            <a
+              style="cursor: pointer"
+              class="dropdown-item"
+              (click)="onFetchData()"
+              >Fetch Data</a
+            >
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
